--- a/index.css
+++ b/index.css
@@ -25,3 +25,15 @@ body {
     background: rgba(0, 0, 0, 0.25);
     color: white;
 }
+
+#play {
+    height: 60px;
+    width: 150px;
+}
+
+#time {
+    background: black;
+    position: relative;
+    display: block;
+    text-align: center;
+}
