--- a/index.css
+++ b/index.css
@@ -8,9 +8,11 @@ body {
 }
 
 #frame {
-    height: 100%;
+    height: 95%;
     width: 100%;
     border: none;
+    position: absolute;
+    bottom: 0;
 }
 
 .controls {
@@ -22,7 +24,7 @@ body {
     top: 0;
     left: 0;
     right: 0;
-    background: rgba(0, 0, 0, 0.25);
+    background: rgba(0, 0, 0);
     color: white;
 }
 
